<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">


    <ImageView
        android:id="@+id/iv_boy_masked"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/boy_masked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_c19_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/wear_a_mask"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_boy_masked"
        app:layout_constraintTop_toTopOf="@id/iv_boy_masked" />

    <TextView
        android:id="@+id/tv_c19_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clean_your_hands"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_boy_masked"
        app:layout_constraintTop_toBottomOf="@id/tv_c19_guideline1" />

    <TextView
        android:id="@+id/tv_c19_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/maintain_safe_distance"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_boy_masked"
        app:layout_constraintTop_toBottomOf="@id/tv_c19_guideline2" />

    <TextView
        android:id="@+id/tv_c19_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/get_vaccinated"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_boy_masked"
        app:layout_constraintTop_toBottomOf="@id/tv_c19_guideline3" />

    <View
        android:id="@+id/bg_red"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@drawable/curved_corners"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_boy_masked" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/confirmed"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bg_red"
        app:layout_constraintStart_toStartOf="@id/bg_red"
        app:layout_constraintTop_toTopOf="@id/bg_red" />

    <TextView
        android:id="@+id/api_total_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5000"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/bg_red"
        app:layout_constraintEnd_toEndOf="@id/bg_red"
        app:layout_constraintStart_toStartOf="@id/bg_red"
        app:layout_constraintTop_toTopOf="@id/bg_red" />


    <View
        android:id="@+id/bg_blue"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_curved_blue"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_boy_masked" />

    <TextView
        android:id="@+id/tv_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/active"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bg_blue"
        app:layout_constraintStart_toStartOf="@id/bg_blue"
        app:layout_constraintTop_toTopOf="@id/bg_blue" />

    <TextView
        android:id="@+id/api_active_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5000"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/bg_blue"
        app:layout_constraintEnd_toEndOf="@id/bg_blue"
        app:layout_constraintStart_toStartOf="@id/bg_blue"
        app:layout_constraintTop_toTopOf="@id/bg_blue" />


    <View
        android:id="@+id/bg_green"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_curved_green"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_red" />

    <TextView
        android:id="@+id/tv_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/recovered"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bg_green"
        app:layout_constraintStart_toStartOf="@id/bg_green"
        app:layout_constraintTop_toTopOf="@id/bg_green" />

    <TextView
        android:id="@+id/api_recovered_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5000"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/bg_green"
        app:layout_constraintEnd_toEndOf="@id/bg_green"
        app:layout_constraintStart_toStartOf="@id/bg_green"
        app:layout_constraintTop_toTopOf="@id/bg_green" />

    <View
        android:id="@+id/bg_yellow"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_curved_grey"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_blue" />

    <TextView
        android:id="@+id/tv_deceased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/deceased"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bg_yellow"
        app:layout_constraintStart_toStartOf="@id/bg_yellow"
        app:layout_constraintTop_toTopOf="@id/bg_yellow" />

    <TextView
        android:id="@+id/api_deceased_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5000"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/bg_yellow"
        app:layout_constraintEnd_toEndOf="@id/bg_yellow"
        app:layout_constraintStart_toStartOf="@id/bg_yellow"
        app:layout_constraintTop_toTopOf="@id/bg_yellow" />

    <View
        android:id="@+id/bg_brown"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_curved_brown"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_yellow" />

    <TextView
        android:id="@+id/tv_vaccinated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/last_updated"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bg_brown"
        app:layout_constraintStart_toStartOf="@id/bg_brown"
        app:layout_constraintTop_toTopOf="@id/bg_brown" />

    <TextView
        android:id="@+id/api_last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5000"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/bg_brown"
        app:layout_constraintEnd_toEndOf="@id/bg_brown"
        app:layout_constraintStart_toStartOf="@id/bg_brown"
        app:layout_constraintTop_toTopOf="@id/bg_brown" />


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>